unify the initialization of list